[bug 648164] Align Unwatch icon with Watching icon

--- a/media/css/forums.css
+++ b/media/css/forums.css
@@ -438,6 +438,10 @@ div.badges span {
     padding: 2px 10px 2px 32px;
 }
 
+input.watchtoggle {
+    margin: 0 0 0 8px;
+}
+
 span.sticky {
     background: #eaf4f8 url(../img/forums/type/sticky.png) no-repeat 8px center;
     color: #139ec4;
